# comfyui-mcp-panel

./: .comfyignore  .gitignore  CHANGELOG.md  README.md  __init__.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml  publish_action.yml
browser_tests/: README.md  agent-drive.spec.ts  apps.spec.ts  auto-layout.spec.ts  connect-matcher.spec.ts  connect.spec.ts  conversation-persistence.spec.ts  external-orchestrator.spec.ts  hidden-tab.spec.ts  moonshot-provider.spec.ts  pending-queue.spec.ts  streaming-render.spec.ts  training-wizard.spec.ts  workflow-chat-identity.spec.ts  working-indicator-liveness.spec.ts
browser_tests/fixtures/: MockBridge.ts  PanelPage.ts  panelTest.ts
browser_tests/unit/: a2ui-validate.test.mjs  apps.test.mjs  chat-history-store.test.mjs  civitai-at-syntax.test.mjs  civitai-base-models.test.mjs  civitai-creator.test.mjs  civitai-drive-results.test.mjs  civitai-workflow.test.mjs  feedback.test.mjs  layout-engine.test.mjs  test_apps_routes.py  test_civitai_download_route.py  test_civitai_proxy.py  workflow-chat-identity.test.mjs
docs/: registry-scan-exception.md
docs/design/: apps-monetization.md  auto-layout-engine.md  connect-auto-match.md
docs/superpowers/plans/: 2026-07-10-per-workflow-agent-sessions.md
docs/superpowers/specs/: 2026-07-10-per-workflow-agent-sessions-design.md
py/: __init__.py  apps_routes.py  civitai_proxy.py  training_routes.py
registry/: wrangler.toml
registry/migrations/: 0001_init.sql
registry/src/: core.js  worker.js
registry/test/: worker.test.mjs
scripts/: brand_assets.py  brand_assets_ai.py  build-a2ui-vendor.mjs  gen-changelog.mjs  panel-guard.mjs  set-version.mjs  verify-per-workflow.mjs
tests/: a2ui-validate.test.mjs
vendor-spike/: package.json
web/js/: cmcp-a2ui-lit-adapter.js  cmcp-a2ui.js  cmcp-apps-ui.js  cmcp-apps.js  cmcp-civitai-ui.js  cmcp-civitai.js  cmcp-filter.js  cmcp-modal.js  cmcp-runpod-ui.js  cmcp-sidepanel-ui.js  cmcp-training-ui.js  comfyui-mcp-panel.js
web/js/lib/: chat-history-store.js  feedback.js  layout-engine.js  workflow-chat-identity.js
workers/feedback-uploader/: README.md  package.json  wrangler.jsonc
workers/feedback-uploader/src/: index.js  sigv4.js  validate.js
workers/feedback-uploader/test/: handler.test.mjs  sigv4.test.mjs  validate.test.mjs
