[project]
name = "comfyui-agent-panel"
description = "Autonomous AI agent in the ComfyUI sidebar — runs locally on your own Claude OR ChatGPT subscription (no API keys, no extra LLM costs). Pick a provider and the agent drives your live canvas at full parity: add, wire, move and tweak nodes with Ctrl+Z undo, load whole workflows and installer packs in one shot, generate images, video and audio, and run your workflow — asking before it spends paid API credits. The sidebar UI for comfyui-mcp, the local-first, agent-native control plane for ComfyUI."
version = "0.8.1"
license = { file = "LICENSE" }
requires-python = ">=3.9"
# UI-only pack: no Python deps. The frontend floor guarantees
# app.extensionManager.registerSidebarTab exists.
dependencies = ["comfyui-frontend-package>=1.20.0"]
classifiers = ["Operating System :: OS Independent"]

[project.urls]
Repository = "https://github.com/artokun/comfyui-mcp-panel"
Documentation = "https://comfyui-mcp.artokun.io/docs"
"Bug Tracker" = "https://github.com/artokun/comfyui-mcp-panel/issues"
Discord = "https://discord.gg/cW9arBhzCu"

[tool.comfy]
PublisherId = "artokun"
DisplayName = "ComfyUI Agent Panel"
Tags = ["agent", "ai-agent", "assistant", "copilot", "claude", "chatgpt", "gpt-5", "codex", "mcp", "autonomous", "natural-language", "workflow", "sidebar", "automation"]
Icon = "https://raw.githubusercontent.com/artokun/comfyui-mcp-panel/main/assets/icon.png"
Banner = "https://raw.githubusercontent.com/artokun/comfyui-mcp-panel/main/assets/banner.png"
